fix: clean_pbp - fix all remaining thrown KeyErrors; post associated tests for clean_pbp

--- a/.pylintrc
+++ b/.pylintrc
@@ -3,6 +3,7 @@ ignore=__pycache__
 
 [MESSAGES CONTROL]
 disable=
+    line-too-long,
     missing-module-docstring,
     missing-class-docstring,
     missing-function-docstring,
